<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_title_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_color"
            android:gravity="center"
            android:text="@string/upstream_push_title"
            android:textColor="@color/white_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_title_1"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/tv_title_1"
            android:layout_alignTop="@id/tv_title_1"
            android:onClick="onSendButtonClick"
            android:src="@drawable/arrow_white" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/tv_title_1"
            android:layout_alignRight="@id/tv_title_1"
            android:layout_below="@id/tv_title_1"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow_color"
            android:gravity="left|center_vertical"
            android:onClick="onSendButtonClick"
            android:text="@string/upstream_push_summary"
            android:textColor="@color/red_color"
            android:textSize="16sp"
            android:typeface="serif" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_title_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_color"
            android:gravity="center"
            android:text="@string/case_push_title"
            android:textColor="@color/white_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_title_2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/tv_title_2"
            android:layout_alignTop="@id/tv_title_2"
            android:onClick="onCaseButtonClick"
            android:src="@drawable/arrow_white" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/tv_title_2"
            android:layout_alignRight="@id/tv_title_2"
            android:layout_below="@id/tv_title_2"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow_color"
            android:gravity="left|center_vertical"
            android:onClick="onCaseButtonClick"
            android:text="@string/case_push_summary"
            android:textColor="@color/red_color"
            android:textSize="16sp"
            android:typeface="serif" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_title_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@color/blue_color"
            android:gravity="center"
            android:text="@string/system_push_title"
            android:textColor="@color/white_color"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_title_3"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignRight="@id/tv_title_3"
            android:layout_alignTop="@id/tv_title_3"
            android:onClick="onSystemButtonClick"
            android:src="@drawable/arrow_white" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignLeft="@id/tv_title_3"
            android:layout_alignRight="@id/tv_title_3"
            android:layout_below="@id/tv_title_3"
            android:layout_marginBottom="10dp"
            android:background="@color/yellow_color"
            android:gravity="left|center_vertical"
            android:onClick="onSystemButtonClick"
            android:text="@string/system_push_summary"
            android:textColor="@color/red_color"
            android:textSize="16sp"
            android:typeface="serif" >
        </Button>
    </RelativeLayout>

</LinearLayout>